## Process this file with automake to produce Makefile.in

# XXX: http://stackoverflow.com/questions/323790/autotools-how-to-set-global-compilation-flag
#include $(top_srcdir)/common.mk

#AM_CFLAGS = -Wall -g3 -O0 -I$(ZLOG_DIR)/include  -std=c99  -ansi -fno-asm -lm -static 
AM_CFLAGS = -Wall -g3 -O0

bin_PROGRAMS = easyshit_btree
